# AIRA

./: .env.example  .gitignore  QWEN.md  README.md
.qwen/skills/ingest/: SKILL.md
.qwen/skills/research/: SKILL.md
docs/: design.md
rules/: aira-orchestration.md
skills/: .skills_store_lock.json
skills/aminer-daily-paper/: README.md  SKILL.md
skills/aminer-daily-paper/scripts/: aminer_schema.py  common.py  constants.py  dispatch_feishu_messages.py  feishu_cards.py  handle_trigger.py  rec5_api.py  render_feishu_messages.py  run_pipeline.py
skills/health/: SKILL.md
skills/ingest/: README.md  SKILL.md  pyproject.toml
skills/ingest-raw/: SKILL.md
skills/ingest/ingest_raw/: __init__.py  __main__.py  cli.py  core.py
skills/mineru/: SKILL.md
skills/research/: SKILL.md
