[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aira-ingest"
version = "0.1.0"
description = "CLI tool for AIRA knowledge base ingestion"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AIRA Team"}
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
aira-ingest = "ingest_raw.cli:main"

[tool.setuptools.packages.find]
include = ["ingest_raw*"]
